--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,8 @@
     "extensions.ignoreRecommendations": true,
     "C_Cpp.default.configurationProvider": "particle.particle-vscode-core",
     "files.associations": {
-        "*.ino": "cpp",
-        "iostream": "cpp",
-        "random": "cpp",
-        "algorithm": "cpp"
+        "*.ino": "cpp"
     },
     "particle.firmwareVersion": "1.5.2",
-    "particle.targetPlatform": "boron"
+    "particle.targetPlatform": "argon"
 }
