--- a/lib/neopixel/library.properties
+++ b/lib/neopixel/library.properties
@@ -1,7 +1,7 @@
 name=neopixel
-version=1.0.0
+version=1.0.1
 license=LGPLv3
 author=Adafruit, Technobly
-sentence=An Implementation of Adafruit's NeoPixel Library for the Particle Core, Photon, Electron, Argon, Boron, Xenon and RedBear Duo
+sentence=An Implementation of Adafruit's NeoPixel Library for the Particle Core, Photon, Electron, Argon, Boron, Xenon, RedBear Duo, B SoM, B5 SoM, E SoM X and Tracker
 url=https://github.com/technobly/Particle-NeoPixel
 repository=https://github.com/technobly/Particle-NeoPixel.git
